# computervision

./: 10_sobel_operators.ipynb  11_histograms.ipynb  1_numpyarrays.ipynb  2_opencv.ipynb  3_drawing.ipynb  4_draw_with_mouse.py  4_mouse_draw.ipynb  5_assessment.ipynb  5_assessment.py  6_image_processing.ipynb  7_thresholding.ipynb  9_morphological_operators.ipynb  draw_circle.py  main.py  mypuppy.py  myscript.py  pyproject.toml
