[project]
name = "python-cv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "keras>=3.10.0",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "scikit-learn>=1.7.1",
    "tensorflow>=2.19.0",
]
